Bug 224012 - VerReg.c warning: "VR_FILE_SEP redefined", r+sr=dveditz